[package]
name = "rust_syscalls"
version = "0.1.0"
edition = "2021"

[dependencies]
str_crypter = "1.0.2"
windows = { version = "0.56.0", features = ["Win32_System_Threading", "Win32_Security", "Win32_System_LibraryLoader", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_WindowsProgramming", "Win32_System_SystemServices", "Win32_System_SystemInformation" ] }
